src/objects/Detail_Page_Layout_Custom_Message__mdt.object
<CustomObject>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Salesforce icon to be used on the message</description>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Object__c</fullName>
        <description>The API name of the object layout where the message will be displayed</description>
        <label>Main Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message to be displayed, if want to use variables, the syntax is:
{!ObjectAPIName.FieldAPIName}
e.g. {!Account.Name}

If want to use relations on variables, the syntax is:
{!ObjectAPIName.RelationAPIName.FieldAPIName}
e.g. {!Account.IATA_ISO_Country__r.Name}</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to limit the number of messages displayed, if true a message will be display per each record that matches the query.</description>
        <label>Multiple Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <description>SOQL query that if returns at least one record the message will be displayed. Use Id = {!recordId} on query to filter by results related with main object record</description>
        <label>Query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <description>The API name of a related object to be used on the message and query</description>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <description>Field to control the variant used on Icon.
Available values:
&apos;error&apos;
&apos;warning&apos;
&apos;inverse&apos;</description>
        <label>Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Detail Page Layout Custom Message</label>
    <pluralLabel>Detail Page Layout Custom Messages</pluralLabel>
</CustomObject>